// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Care Teams list view renders correctly: Search 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Care Team One
</td>
`;

exports[`Care Teams list view renders correctly: Search 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/admin/CareTeam/edit/308"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`Care Teams list view renders correctly: Search 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Care Team Three
</td>
`;

exports[`Care Teams list view renders correctly: Search 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/admin/CareTeam/edit/325"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`Care Teams list view renders correctly: Search 3 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Care Team Five
</td>
`;

exports[`Care Teams list view renders correctly: Search 3 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/admin/CareTeam/edit/327"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`Care Teams list view renders correctly: Search 4 page 1 1`] = `
<td
  class="ant-table-cell"
>
  test 33
</td>
`;

exports[`Care Teams list view renders correctly: Search 4 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/admin/CareTeam/edit/330"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`Care Teams list view renders correctly: Search 5 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Care Team Six
</td>
`;

exports[`Care Teams list view renders correctly: Search 5 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/admin/CareTeam/edit/328"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`Care Teams list view renders correctly: Search 6 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Care Team Four
</td>
`;

exports[`Care Teams list view renders correctly: Search 6 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/admin/CareTeam/edit/326"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`Care Teams list view renders correctly: view details display block 1`] = `
<span
  class="ant-typography display-block"
>
  <strong>
    Name
  </strong>
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 2`] = `
<span
  class="ant-typography ant-typography-secondary display-block"
>
  Peter Charlmers Care team
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 3`] = `
<span
  class="ant-typography display-block"
>
  <strong>
    Identifier
  </strong>
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 4`] = `
<span
  class="ant-typography ant-typography-secondary display-block"
/>
`;

exports[`Care Teams list view renders correctly: view details display block 5`] = `
<span
  class="ant-typography display-block"
>
  <strong>
    Status
  </strong>
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 6`] = `
<span
  class="ant-typography ant-typography-secondary display-block"
>
  active
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 7`] = `
<span
  class="ant-typography display-block"
>
  <strong>
    Participant
  </strong>
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 8`] = `
<span
  class="ant-typography ant-typography-secondary display-block"
>
  
</span>
`;

exports[`Care Teams list view renders correctly: view details display block 9`] = `
<span
  class="ant-typography ant-typography-secondary display-block"
>
  
</span>
`;
